--- a/templates/base/nav_9c.html
+++ b/templates/base/nav_9c.html
@@ -1,7 +1,7 @@
 {% extends "base/nav.html" %}
 {% block content_9c %}
-    <div class="page_header">
-        {% block page_header %}
+    <div id="title_bar_9c">
+        {% block title_bar %}
             page header
         {% endblock %}
     </div>
