--- a/static/fonts/museoslab/stylesheet.css
+++ b/static/fonts/museoslab/stylesheet.css
@@ -9,7 +9,7 @@
  * copyright law. You are prohibited from modifying, reverse engineering, duplicating, or
  * distributing this font software.
  *
- * (c) 2010 Fontspring
+ * (c) 2010-2011 Fontspring
  *
  *
  *
@@ -21,18 +21,33 @@
  *
  *
  */
-
 @font-face {
-	/* This declaration targets Internet Explorer */
-	font-family: 'MuseoSlab500';
-	src: url('Museo_Slab_500-webfont.eot');
+    font-family: 'MuseoSlab500';
+    src: url('Museo_Slab_500-webfont.eot');
+    src: url('Museo_Slab_500-webfont.eot?iefix') format('eot'),
+         url('Museo_Slab_500-webfont.woff') format('woff'),
+         url('Museo_Slab_500-webfont.ttf') format('truetype'),
+         url('Museo_Slab_500-webfont.svg#webfont8VbsAwew') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
-
 @font-face {
-	/* This declaration targets everything else */
-	font-family: 'MuseoSlab500';
-	src: url(//:) format('no404'), url('Museo_Slab_500-webfont.woff') format('woff'), url('Museo_Slab_500-webfont.ttf') format('truetype'), url('Museo_Slab_500-webfont.svg#webfontCqe9dOP9') format('svg');
-	font-weight: normal;
-	font-style: normal;
+    font-family: 'MuseoSlab500Italic';
+    src: url('Museo_Slab_500italic-webfont.eot');
+    src: url('Museo_Slab_500italic-webfont.eot?iefix') format('eot'),
+         url('Museo_Slab_500italic-webfont.woff') format('woff'),
+         url('Museo_Slab_500italic-webfont.ttf') format('truetype'),
+         url('Museo_Slab_500italic-webfont.svg#webfontrnC2qhZD') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
-
+@font-face {
+    font-family: 'MuseoSlab900';
+    src: url('Museo_Slab_900-webfont.eot');
+    src: url('Museo_Slab_900-webfont.eot?iefix') format('eot'),
+         url('Museo_Slab_900-webfont.woff') format('woff'),
+         url('Museo_Slab_900-webfont.ttf') format('truetype'),
+         url('Museo_Slab_900-webfont.svg#webfontLtlWo4vw') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
