--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -28,8 +28,6 @@
         <link rel="alternate" type="application/atom+xml"  href="{% url blog_feed %}" title="Repower at Home Blog" />
         <link rel="shortcut icon" href="{% dated_static 'images/theme/favicon.ico' %}"/>
         <link rel="stylesheet" href="{% dated_static 'css/style_new.css' %}" type="text/css" media="screen" charset="utf-8"/>
-        <!--[if IE]>
-        <![endif]-->
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-11623269-1']);
@@ -43,32 +41,32 @@
     <body>
         <div id="header_container">
             <div id="header" class="container_12">
-                <a href="/" title="Home" id="header_logo">
-                    <img src="{% dated_static 'images/theme_new/header_logo.png' %}" alt="Repower at Home logo" width="239" height="35"/>
-                </a>
-                <form action="/search" id="cse_search_box_form">
-                    <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
-                    <input type="hidden" name="cof" value="FORID:11" />
-                    <input type="hidden" name="ie" value="UTF-8" />
-                    <input type="text" name="q" size="31" id="cse_search_box"/>
-                    <button type="submit" id="cse_search_box_submit">Go</button>
-                </form>
-                <div id="header_links">
-                    <a href="/about/" id="header_about">About Us</a>
-                    <a href="{% url blog_index %}">Blog</a>
-                    <button>Log In</button>
+                <div class="grid_12 alpha omega">
+                    <a href="/" title="Home" id="header_logo">
+                        <img src="{% dated_static 'images/theme_new/header_logo.png' %}" alt="Repower at Home logo" width="239" height="35"/>
+                    </a>
+                    <form action="/search" id="cse_search_box_form">
+                        <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
+                        <input type="hidden" name="cof" value="FORID:11" />
+                        <input type="hidden" name="ie" value="UTF-8" />
+                        <input type="text" name="q" size="31" id="cse_search_box"/>
+                        <button type="submit" id="cse_search_box_submit">Go</button>
+                    </form>
+                    <div id="header_links">
+                        <a href="/about/" id="header_about">About Us</a>
+                        <a href="{% url blog_index %}">Blog</a>
+                        <a href="{% url login %}" class="button button_small">Log In</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="content_container">
+        <div id="content_container" class="{{ section_class }}">
             <div class="container_12">
                 <div class="grid_12 alpha omega">
                     {% block 12c_content %}
                     {% endblock %}
                 </div>
             </div>
-            
-
         </div>
         <div id="footer_container">
             <div id="footer" class="container_12">
