cleaning up some css selectors

--- a/templates/base/nav_9c.html
+++ b/templates/base/nav_9c.html
@@ -1,5 +1,6 @@
 {% extends "base/nav.html" %}
 {% block content_9c %}
+<div id="content_9c">
     <div id="title_bar_9c">
         {% block title_bar %}
             page header
@@ -16,4 +17,5 @@
             major col
         {% endblock %}
     </div>
+</div>
 {% endblock %}
