--- a/events/templates/events/detail.html
+++ b/events/templates/events/detail.html
@@ -1,4 +1,4 @@
-{% extends "events/base.html" %}
+{% extends "base/nav_6c3c.html" %}
 {% load dated_static %}
 {% load comments %}
 {% block title %}{{ event }}{% endblock %}
