--- a/events/templates/events/edit.html
+++ b/events/templates/events/edit.html
@@ -1,4 +1,5 @@
-{% extends "events/base.html" %}
+{% extends "base/nav_6c3c.html" %}
+
 {% load dated_static %}
 {% block title %}Edit {{ event }}{% endblock %}
 {% block breadcrumbs %}
