--- a/events/templates/events/message.html
+++ b/events/templates/events/message.html
@@ -1,4 +1,5 @@
-{% extends "events/base.html" %}
+{% extends "base/nav_6c3c.html" %}
+
 
 {% block title %}{{ event }} Message{% endblock %}
 {% block breadcrumbs %}
