--- a/events/templates/events/archive.html
+++ b/events/templates/events/archive.html
@@ -1,4 +1,4 @@
-{% extends "events/base.html" %}
+{% extends "base/nav_6c3c.html" %}
 {% load dated_static %}
 {% block title %}Events on Repower at Home{% endblock %}
 {% block breadcrumbs %}
