--- a/events/templates/events/guests_invite.html
+++ b/events/templates/events/guests_invite.html
@@ -1,4 +1,5 @@
-{% extends "events/base.html" %}
+{% extends "base/nav_6c3c.html" %}
+
 
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
