--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -25,6 +25,16 @@ Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fo
  *
  */
 @font-face {
+    font-family: 'MuseoSlab100';
+    src: url('../fonts/museoslab/Museo_Slab_100-webfont.eot');
+    src: url('../fonts/museoslab/Museo_Slab_100-webfont.eot?iefix') format('eot'),
+         url('../fonts/museoslab/Museo_Slab_100-webfont.woff') format('woff'),
+         url('../fonts/museoslab/Museo_Slab_100-webfont.ttf') format('truetype'),
+         url('../fonts/museoslab/Museo_Slab_100-webfont.svg#webfontL1xosY6K') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
     font-family: 'MuseoSlab500';
     src: url('../fonts/museoslab/Museo_Slab_500-webfont.eot');
     src: url('../fonts/museoslab/Museo_Slab_500-webfont.eot?iefix') format('eot'),
@@ -35,12 +45,12 @@ Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fo
     font-style: normal;
 }
 @font-face {
-    font-family: 'MuseoSlab500Italic';
-    src: url('../fonts/museoslab/Museo_Slab_500italic-webfont.eot');
-    src: url('../fonts/museoslab/Museo_Slab_500italic-webfont.eot?iefix') format('eot'),
-         url('../fonts/museoslab/Museo_Slab_500italic-webfont.woff') format('woff'),
-         url('../fonts/museoslab/Museo_Slab_500italic-webfont.ttf') format('truetype'),
-         url('../fonts/museoslab/Museo_Slab_500italic-webfont.svg#webfontrnC2qhZD') format('svg');
+    font-family: 'MuseoSlab700';
+    src: url('../fonts/museoslab/Museo_Slab_700-webfont.eot');
+    src: url('../fonts/museoslab/Museo_Slab_700-webfont.eot?iefix') format('eot'),
+         url('../fonts/museoslab/Museo_Slab_700-webfont.woff') format('woff'),
+         url('../fonts/museoslab/Museo_Slab_700-webfont.ttf') format('truetype'),
+         url('../fonts/museoslab/Museo_Slab_700-webfont.svg#webfontCEWZYkyF') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -54,3 +64,4 @@ Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fonts Fo
     font-weight: normal;
     font-style: normal;
 }
+
